[package]
name = "drift-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
drift-core.workspace = true
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
