[package]
name = "cortex-causal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Causal intelligence engine with DAG enforcement, inference, traversal, and narrative generation"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
petgraph = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
test-fixtures = { workspace = true }

[[bench]]
name = "causal_bench"
harness = false
