[package]
name = "cortex-compression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "4-level hierarchical memory compression with token-budget-aware packing"

[dependencies]
cortex-core = { workspace = true }
cortex-tokens = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
