[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, traits, errors, config, and constants for the Cortex memory system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }

[dependencies.ts-rs]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
