[package]
name = "cortex-decay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multi-factor confidence decay with adaptive half-lives and archival triggers"

[dependencies]
cortex-core = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "decay_bench"
harness = false
