[package]
name = "cortex-learning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Correction analysis, principle extraction, and active learning loop"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-embeddings = { workspace = true }
cortex-causal = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
cortex-storage = { workspace = true }
