[package]
name = "cortex-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NAPI bindings exposing the Cortex engine to TypeScript"

[lib]
crate-type = ["cdylib"]

[dependencies]
cortex-core = { workspace = true }
cortex-tokens = { workspace = true }
cortex-storage = { workspace = true }
cortex-embeddings = { workspace = true }
cortex-privacy = { workspace = true }
cortex-compression = { workspace = true }
cortex-decay = { workspace = true }
cortex-causal = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-validation = { workspace = true }
cortex-learning = { workspace = true }
cortex-consolidation = { workspace = true }
cortex-prediction = { workspace = true }
cortex-session = { workspace = true }
cortex-reclassification = { workspace = true }
cortex-observability = { workspace = true }
cortex-cloud = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
napi-build = "2"
