[package]
name = "cortex-privacy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PII and secret sanitization with 50+ regex patterns and context-aware scoring"

[dependencies]
cortex-core = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-fixtures = { workspace = true }
serde_json = { workspace = true }
