[package]
name = "cortex-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Session management with deduplication and token efficiency tracking"

[dependencies]
cortex-core = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
