[package]
name = "cortex-tokens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Accurate token counting via tiktoken-rs with content-hash caching"

[dependencies]
cortex-core = { workspace = true }
tiktoken-rs = { workspace = true }
blake3 = { workspace = true }
moka = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[[test]]
name = "token_properties"
path = "tests/property/token_properties.rs"
