[package]
name = "cortex-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "4-dimension memory validation with contradiction detection, confidence propagation, and automatic healing"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-embeddings = { workspace = true }
petgraph = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-fixtures = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
