[package]
name = "drift-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Benchmarks for the Drift analysis engine"

[dependencies]
drift-core = { workspace = true }
drift-analysis = { workspace = true }
drift-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }

[[bench]]
name = "pipeline"
harness = false
