[package]
name = "drift-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Context generation: builder, tokenization, output formats, package manager support, specification engine"

[dependencies]
drift-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
quick-xml = { workspace = true }
tiktoken-rs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
