[package]
name = "cortex-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cloud sync with conflict resolution, auth, and offline mode (feature-gated)"

[features]
default = []
cloud = ["reqwest", "tokio"]

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
