[package]
name = "cortex-consolidation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HDBSCAN-based memory consolidation pipeline with quality monitoring and auto-tuning"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-embeddings = { workspace = true }
cortex-tokens = { workspace = true }
hdbscan = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
blake3 = { workspace = true }
test-fixtures = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "consolidation_bench"
harness = false
