[package]
name = "cortex-crdt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CRDT primitives for conflict-free multi-agent memory convergence"

[dependencies]
cortex-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
test-fixtures = { workspace = true }

[[bench]]
name = "crdt_bench"
harness = false
