[package]
name = "cortex-embeddings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multi-provider embedding generation with 3-tier cache and Matryoshka support"

[dependencies]
cortex-core = { workspace = true }
ort = { workspace = true }
moka = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "embedding_bench"
harness = false
