[package]
name = "cortex-multiagent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multi-agent memory sharing, namespace isolation, provenance, trust, and delta sync"

[dependencies]
cortex-core = { workspace = true }
cortex-crdt = { workspace = true }
cortex-storage = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
test-fixtures = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-cloud = { workspace = true }
cortex-session = { workspace = true }
cortex-causal = { workspace = true }
cortex-consolidation = { workspace = true }
cortex-validation = { workspace = true }
