[package]
name = "cortex-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Health reporting, metrics collection, structured tracing, and degradation tracking"

[dependencies]
cortex-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
