[package]
name = "cortex-prediction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Predictive memory preloading with 4 strategies and adaptive caching"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
moka = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
