[package]
name = "cortex-reclassification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Automatic importance reclassification based on 5 weighted signals"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { workspace = true }
