[package]
name = "cortex-retrieval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hybrid search (FTS5 + sqlite-vec + RRF), intent-aware re-ranking, generation context"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-embeddings = { workspace = true }
cortex-compression = { workspace = true }
cortex-tokens = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
fastembed = { version = "5", optional = true }

[features]
reranker = ["fastembed"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
test-fixtures = { workspace = true }
chrono = { workspace = true }

[[bench]]
name = "retrieval_bench"
harness = false

[[test]]
name = "retrieval_properties"
path = "tests/property/retrieval_properties.rs"
