[package]
name = "test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-embeddings = { workspace = true }
cortex-compression = { workspace = true }
cortex-decay = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-validation = { workspace = true }
cortex-causal = { workspace = true }
cortex-consolidation = { workspace = true }
cortex-privacy = { workspace = true }
cortex-observability = { workspace = true }
